operator/pkg/gateway-api/testdata/gateway/listenerset-default-not-allowed/input/listenerset-default-not-allowed.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default-not-allowed
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: rejected
  namespace: gateway-conformance-infra
spec:
  parentRef:
    name: default-not-allowed
    namespace: gateway-conformance-infra
  listeners:
    - name: extra-http
      port: 8080
      protocol: HTTP
